fixed alignment

--- a/panel-bar/assets/date.scss
+++ b/panel-bar/assets/date.scss
@@ -11,5 +11,6 @@
 
   &__calendar {
     border-radius: 15px;
+    background-color: $background;
   }
 }
