--- a/panel-bar/assets/music.scss
+++ b/panel-bar/assets/music.scss
@@ -8,6 +8,8 @@
 
   &__track-info {
     border-radius: 10px;
+    background-color: $background;
+    padding: 10px;
   }
 
   &__icon {
