--- a/panel-bar/colors.scss
+++ b/panel-bar/colors.scss
@@ -1,8 +1,9 @@
-$background:#111827;
-$color:#f9fafb;
+// $background:#111827;
+$background: #000000;
+$color: #f9fafb;
 
-$hoverBackground:#f9fafb;
-$hoverColor:#111827;
+$hoverBackground: #f9fafb;
+$hoverColor: #111827;
 
-$activeBackground:#8b5cf6;
-$activeColor:#f9fafb;
+$activeBackground: #8b5cf6;
+$activeColor: #f9fafb;
